feat: Initialize LA3IB project with foundational structure, brand identity, security, routing, and core domain models.

--- a/la3ib_web/web/index.html
+++ b/la3ib_web/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -17,22 +18,37 @@
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Find players. Join games. Play sports in Saudi Arabia.">
+
+  <!-- Google Sign-In Client ID -->
+  <meta name="google-signin-client_id"
+    content="903668742117-vrmce023vnpkgutltplr05nosc1ea3sp.apps.googleusercontent.com">
+
+  <!-- PWA Theme Color -->
+  <meta name="theme-color" content="#00A651">
+  <meta name="msapplication-TileColor" content="#00A651">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="la3ib_web">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="LA3IB">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="icons/Icon-512.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
 
-  <title>la3ib_web</title>
+  <title>LA3IB - Play Sports in Saudi Arabia</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
+
 </html>
